// copied from datadog-agent/pkg/trace/pb

syntax = "proto3";

package pb;

message Span {
    string service = 1;
    string name = 2;
    string resource = 3;
    uint64 traceID = 4;
    uint64 spanID = 5;
    uint64 parentID = 6;
    int64 start = 7;
    int64 duration = 8;
    int32 error = 9;
    map<string, string> meta = 10;
    map<string, double> metrics = 11;
    string type = 12;
}
